--- a/app/src/main/res/layout/activity_diary_write.xml
+++ b/app/src/main/res/layout/activity_diary_write.xml
@@ -109,7 +109,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tv_toFindPw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -142,7 +142,7 @@
         android:text="전염도"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_toFindPw" />
 
     <TextView
         android:id="@+id/textView20"
@@ -179,7 +179,7 @@
         android:gravity="center"
         android:text="22도"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintStart_toEndOf="@+id/tv_toFindPw"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <EditText
