--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -82,7 +82,7 @@
                 android:textColorHint="@color/text_hint" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button"
+                android:id="@+id/btn_idChk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/henam"
@@ -91,7 +91,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_idChk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/henam"
@@ -155,7 +155,7 @@
             android:textColorHint="@color/text_hint" />
 
         <EditText
-            android:id="@+id/edt_num"
+            android:id="@+id/edt_serial"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
