--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -39,7 +39,7 @@
         android:ems="10"
         android:fontFamily="@font/henam"
         android:hint="@string/user_pw"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textColorHint="@color/text_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -126,7 +126,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_join" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tv_toFindId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -138,7 +138,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tv_toFindPw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -161,7 +161,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintStart_toEndOf="@+id/tv_toFindPw"
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
     <TextView
@@ -173,7 +173,7 @@
         android:fontFamily="@font/henam"
         android:text="또는"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintStart_toEndOf="@+id/tv_toFindId"
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
