--- a/app/src/main/res/layout/activity_reservation_add.xml
+++ b/app/src/main/res/layout/activity_reservation_add.xml
@@ -6,4 +6,99 @@
     android:layout_height="match_parent"
     tools:context=".Reservation_add">
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/img_res_add_back"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/left" />
+
+        <TextView
+            android:id="@+id/tv_top"
+            android:layout_width="331dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/henam"
+            android:gravity="left"
+            android:text="   방제 예약 추가"
+            android:textSize="30sp" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="101dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="76dp"
+        android:fontFamily="@font/henam"
+        android:gravity="center"
+        android:text="방제시간"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="107dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/henam"
+        android:gravity="center"
+        android:text="사용약품"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="@+id/textView19"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="@+id/textView19"
+        app:layout_constraintTop_toBottomOf="@+id/textView19" />
+
+    <EditText
+        android:id="@+id/edt_rsvtime"
+        android:layout_width="224dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="28dp"
+        android:ems="10"
+        android:gravity="center_horizontal|center_vertical"
+        android:hint="0000-00-00 00:00"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/textView19"
+        app:layout_constraintStart_toEndOf="@+id/textView19"
+        app:layout_constraintTop_toTopOf="@+id/textView19"
+        app:layout_constraintVertical_bias="0.444" />
+
+    <EditText
+        android:id="@+id/edt_pesticide"
+        android:layout_width="225dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="24dp"
+        android:ems="10"
+        android:foregroundGravity="center"
+        android:gravity="center"
+        android:hint="약품"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/textView20"
+        app:layout_constraintStart_toEndOf="@+id/textView20"
+        app:layout_constraintTop_toTopOf="@+id/textView20"
+        app:layout_constraintVertical_bias="0.541" />
+
+    <Button
+        android:id="@+id/btn_rsv_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/henam"
+        android:text="예약 추가 하기"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edt_pesticide" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
