--- a/app/src/main/res/layout/activity_my_farm.xml
+++ b/app/src/main/res/layout/activity_my_farm.xml
@@ -269,7 +269,7 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:id="@+id/imageView5"
+                            android:id="@+id/img_reservation"
                             android:layout_width="match_parent"
                             android:layout_height="65dp"
                             android:layout_marginTop="10dp"
