--- a/app/src/main/res/layout/activity_diary_contents.xml
+++ b/app/src/main/res/layout/activity_diary_contents.xml
@@ -4,22 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DiaryWrite">
+    tools:context=".DiaryContents">
 
     <TextView
-        android:id="@+id/textView28"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/henam"
-        android:text="제목"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView21" />
-
-    <TextView
-        android:id="@+id/tv_pesti"
+        android:id="@+id/textView29"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="15dp"
@@ -32,10 +20,10 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView20"
-        app:layout_constraintTop_toBottomOf="@+id/tv_humid" />
+        app:layout_constraintTop_toBottomOf="@+id/textView30" />
 
     <TextView
-        android:id="@+id/tv_humid"
+        android:id="@+id/textView30"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="15dp"
@@ -44,7 +32,7 @@
         android:background="@drawable/layout_border"
         android:fontFamily="@font/henam"
         android:gravity="center"
-        android:text="30"
+        android:text="30%"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -52,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <TextView
-        android:id="@+id/tv_disease"
+        android:id="@+id/textView31"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="45dp"
@@ -60,13 +48,13 @@
         android:background="@drawable/layout_border"
         android:fontFamily="@font/henam"
         android:gravity="center"
-        android:text="33"
+        android:text="33%"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/textView19"
-        app:layout_constraintTop_toBottomOf="@+id/tv_temp" />
+        app:layout_constraintStart_toEndOf="@+id/textView35"
+        app:layout_constraintTop_toBottomOf="@+id/textView38" />
 
     <TextView
-        android:id="@+id/tv_cnt"
+        android:id="@+id/textView32"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="18dp"
@@ -74,10 +62,10 @@
         android:background="@drawable/layout_border"
         android:fontFamily="@font/henam"
         android:gravity="center"
-        android:text="3"
+        android:text="3회"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/textView21"
-        app:layout_constraintTop_toBottomOf="@+id/tv_disease" />
+        app:layout_constraintStart_toEndOf="@+id/textView37"
+        app:layout_constraintTop_toBottomOf="@+id/textView31" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -109,10 +97,10 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textView33"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="18dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/henam"
         android:text="농장 온도"
@@ -121,7 +109,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/textView34"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -129,23 +117,23 @@
         android:fontFamily="@font/henam"
         android:text="농장 습도"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_temp"
+        app:layout_constraintStart_toEndOf="@+id/textView38"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <TextView
-        android:id="@+id/textView19"
+        android:id="@+id/textView35"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="18dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/henam"
         android:text="전염도"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/textView33" />
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/textView36"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -153,23 +141,23 @@
         android:fontFamily="@font/henam"
         android:text="방제 약품"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_disease"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintStart_toEndOf="@+id/textView31"
+        app:layout_constraintTop_toBottomOf="@+id/textView34" />
 
     <TextView
-        android:id="@+id/textView21"
+        android:id="@+id/textView37"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="18dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/henam"
         android:text="방제 횟수"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19" />
+        app:layout_constraintTop_toBottomOf="@+id/textView35" />
 
     <TextView
-        android:id="@+id/tv_temp"
+        android:id="@+id/textView38"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_marginStart="18dp"
@@ -177,50 +165,22 @@
         android:background="@drawable/layout_border"
         android:fontFamily="@font/henam"
         android:gravity="center"
-        android:text="22"
+        android:text="22도"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintStart_toEndOf="@+id/textView33"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-    <EditText
-        android:id="@+id/edt_title"
-        android:layout_width="295dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="25dp"
-        android:background="@drawable/layout_border"
-        android:ems="10"
-        android:hint="  제목을 입력하세요."
-        android:inputType="textPersonName"
-        android:textColorHint="@color/text_hint"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_cnt" />
-
-    <EditText
-        android:id="@+id/edt_content"
-        android:layout_width="362dp"
-        android:layout_height="184dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/layout_border"
-        android:ems="10"
-        android:gravity="top"
-        android:hint=" 내용을 입력하세요."
-        android:inputType="textPersonName"
-        android:textColorHint="@color/text_hint"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_title" />
-
     <Button
-        android:id="@+id/btn_write"
+        android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="작성하기"
+        android:layout_marginTop="15dp"
+        android:text="수정하기"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_content" />
+        app:layout_constraintTop_toBottomOf="@+id/textView40" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navi"
@@ -230,4 +190,69 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/textView39"
+        android:layout_width="295dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/layout_border"
+        android:fontFamily="@font/henam"
+        android:gravity="center_vertical"
+        android:text="TextView"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/textView22"
+        app:layout_constraintTop_toBottomOf="@+id/textView42" />
+
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="45dp"
+        android:fontFamily="@font/henam"
+        android:text="제목"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView41" />
+
+    <TextView
+        android:id="@+id/textView40"
+        android:layout_width="362dp"
+        android:layout_height="184dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/layout_border"
+        android:fontFamily="@font/henam"
+        android:text="TextView"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView39" />
+
+    <TextView
+        android:id="@+id/textView41"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/henam"
+        android:text="작성 날짜"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView37" />
+
+    <TextView
+        android:id="@+id/textView42"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/layout_border"
+        android:fontFamily="@font/henam"
+        android:gravity="center"
+        android:text="2022.06.02"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/textView41"
+        app:layout_constraintTop_toBottomOf="@+id/textView32" />
 </androidx.constraintlayout.widget.ConstraintLayout>
