--- a/app/src/main/res/layout/activity_find_id.xml
+++ b/app/src/main/res/layout/activity_find_id.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/img_farm_back"
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
